# scrivo

./: .flake8  .gitignore  LICENSE  LICENSE.md  PROFILING.md  README.md  config.yml  example-config.yml  pyproject.toml  setup.py
git/hooks/: pre-commit.sh
scrivo/: __init__.py  __main__.py  blog.py  build.py  cli.py  compile.py  config.py  markdown.py  page.py  pages.py  rendering.py  template.py  utils.py
scrivo/ml/: __init__.py  page_similarity.py
src/scrivo/: __main__.py  compile.py  markdown.py  pages.py  rendering.py  similarity.py  utils.py
tests/: test_placeholder.py
