[tool.poetry]
name = "scrivo"
version = "2024.3.9"
description = "A static website generator."
authors = ["Tom Shafer <tom@tshafer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
markdown = "^3.4.1"
pyyaml = "^6.0"
python-markdown-math = "^0.8"
plain-text-markdown-extention = {git = "https://github.com/kostyachum/python-markdown-plain-text.git"}
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pyinstrument = "^4.4.0"
types-markdown = "^3.4.2.3"
types-pyyaml = "^6.0.12.5"
types-tqdm = "^4.64.7.12"
ruff = "^0.3.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
