[project]
name = "scrivo"
version = "0.0.3.1"
description = "My personal website generator"
readme = "README.md"
authors = [{ name = "Tom Shafer", email = "tom@tshafer.com" }]
requires-python = ">=3.11"
dependencies = [
    "bs4",
    "jinja2",
    "lxml",
    "markdown",
    "numpy",
    "pygments",
    "python-markdown-math",
    "PyYAML",
    "scikit-learn",
    "snowballstemmer",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
